--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1"
   }
 }
