--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
+    "eslint": "^8.22.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.8.4",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
     "prettier": "^2.7.1"
   }
